working fetch and rendering information from API with one pokemon

--- a/src/styling/ComponentStyling.css
+++ b/src/styling/ComponentStyling.css
@@ -17,8 +17,16 @@
 }
 
 .pokemon {
-    width: 100px;
-    height: 50px;
+    width: 400px;
+    height: 500px;
+    text-align: center;
 
     border: solid red 2px;
+}
+
+img {
+    width: 200px;
+    height: 200px;
+
+    border: solid black 2px;
 }
